product add test

--- a/Ecart/Web.config
+++ b/Ecart/Web.config
@@ -13,10 +13,7 @@
       providerName="System.Data.SqlClient" />
   </connectionStrings> -->
   <connectionStrings>
-    <add name="connection" connectionString="Data Source=DESKTOP-U0JI83R\SQLEXPRESS; Initial Catalog=EcartDB;Integrated Security=True " providerName="System.Data.SqlClient" />
-    <add name="ECartDBEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-E4V8EUP4;initial catalog=ECartDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="ECartDBEntities1" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-U0JI83R\SQLEXPRESS;initial catalog=ECartDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+    <add name="connection" connectionString="Data Source=LAPTOP-E4V8EUP4; Initial Catalog=EcartDB;Integrated Security=True " providerName="System.Data.SqlClient" /><add name="ECartDBEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-E4V8EUP4;initial catalog=ECartDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /><add name="ECartDBEntities1" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-E4V8EUP4;initial catalog=ECartDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
